--- a/src/City.css
+++ b/src/City.css
@@ -53,7 +53,7 @@ form {
 
 .fa-map-pin {
   font-size: 24px;
-  color: red;
+  color: rgb(9, 162, 189);
 }
 .current-city {
   font-size: 44px;
@@ -62,7 +62,7 @@ form {
 }
 .fa-temperature-three-quarters {
   font-size: 24px;
-  color: red;
+  color: rgb(9, 162, 189);
 }
 
 .current-city-temp {
