Added weather forecast to 7 days

--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -5,7 +5,7 @@
     color: white;
     font-weight: 400;
 }
-.WeatherForecast-temperature{
+.forecast-temperatures{
      color: white;
     font-weight: 400;
 }
