--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -9,3 +9,12 @@
      color: white;
     font-weight: 400;
 }
+
+.forecast-day-card {
+    transition: var(--transition);
+}
+
+.forecast-day-card:hover {
+    box-shadow: 2px 2px 8px #F7F5F4, 0 0 2px #F7F5F4;;
+    border-radius: 5px;
+} 
