--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,26 +1,27 @@
 .Weather {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  /* background-image: url("../icons/pexels-ithalu-dominguez-907485.jpg");
-  background-size: cover;
-  background-repeat: no-repeat; */
+  
 }
+
 
 .conteiner {
   max-width: 800px;
   margin: 0 auto;
-}
+  margin-top: 50px;
+  }
 .wrapper {
   /* background: linear-gradient(to bottom, #30cfd0 0%, #330867 100%); */
-  background-image: url(https://klike.net/uploads/posts/2022-10/1665300469_9-6.jpg);
-  opacity: 0,5;
+  background-image: url(https://images.pexels.com/photos/2100002/pexels-photo-2100002.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+ 
   max-width: 800px;
   margin: 0 auto;
-  padding: 20px 60px 40px 60px;
-  border: 1px solid rgb(113, 113, 148);
+  padding: 20px 60px 10px 60px;
+ 
   border-radius: 10px;
-  box-shadow: 0px 0px 5px #e2c64b;
-  margin-top: 50px;
-  max-height: 600px;
+ 
+   max-height: 600px;
+    box-shadow: 2px 2px 8px #F7F5F4, 0 0 2px #F7F5F4;;
+    border-radius: 5px;
 }
 
 
